# AI-Linux-Assistant

./: .gitignore  AGENTS.md  AUTHENTICATION.md  CLAUDE.md  HANDOFF.md  README.md  ULTRAREVIEW_FINDINGS.md  progress.md  run_dev.py  run_eval_harness.py  run_public_api.py
eval-harness/: README.md  pyproject.toml
eval-harness/Back-end/api/: deps.py  jobs.py  main.py  schemas.py
eval-harness/Back-end/eval_harness/: anthropic_llm.py  artifacts.py  cli.py  env.py  mapping.py  orchestrator.py  scenario.py
eval-harness/Back-end/tests/: test_ai_linux_assistant_http.py  test_anthropic_clients.py  test_aws_auth.py  test_aws_docs.py  test_cli.py  test_cli_defaults.py  test_cli_openai_responses.py  test_config_loader.py  test_example_config.py  test_example_grader.py  test_fs_helpers.py  test_judge_orchestrator.py  test_judge_rubric.py  test_openai_responses.py  test_openai_responses_judge.py  test_orchestrator.py  test_persistence_database.py  test_persistence_store.py  test_route_generate_stream.py  test_route_subjects_removed.py  test_run_eval_harness.py  test_scenario_fsm.py  test_scenario_validation.py
eval-harness/Front-end/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
eval-harness/Front-end/src/: App.tsx  api.ts  apiAuth.ts  styles.css  types.ts
eval-harness/examples/: aws_ai_linux_assistant_config.json  aws_ai_linux_assistant_vs_chatgpt_config.json
eval-harness/examples/planner_requests/: cascading_complex_scenario.json  general_linux_troubleshooting_request.json  nginx_recovery_request.json
eval-harness/examples/scenarios/: nginx_service_repair.json  ssh_config_repair.json
eval-harness/infra/aws/: README.md
eval-harness/infra/migrations/: 0001_judge_items_phase1.sql  0002_judge_items_phase3.sql
eval-harness/src/eval_harness/: __init__.py  anthropic_llm.py  artifacts.py  (+8 more)
eval-harness/tests/: test_ai_linux_assistant_http.py  test_anthropic_clients.py  test_auth0_m2m.py  test_aws_backend.py  test_aws_docs.py  test_aws_packer.py  test_bradley_terry.py  test_calibration.py  test_cli_defaults.py  test_cli_openai_responses.py  test_cli_redaction.py  test_config_loader.py  test_example_config.py  test_example_grader.py  test_google_genai_clients.py  test_judge_models.py  test_judge_orchestrator.py  test_judge_prompts.py  test_judge_schema.py  test_openai_compatible_planner.py  test_openai_responses.py  test_openai_responses_judge.py  test_openai_responses_planner.py  test_openclaw_controller.py  test_orchestrator.py  test_persistence_database.py  test_persistence_store.py  test_progress.py  test_run_eval_harness.py  test_scenario_fsm.py  test_scenario_validation.py  test_ssm_controller.py  test_user_proxy_fsm.py
extracted/durable-compute-plane/: README.md  pyproject.toml
(+429 files in other folders)
