[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-harness"
version = "0.1.0"
description = "AWS-first standalone evaluation harness scaffold for environment-grounded assistant testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
