[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-harness"
version = "0.1.0"
description = "AWS-first standalone evaluation harness scaffold for environment-grounded assistant testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.57.1",
  "google-genai>=1.20.0",
  "openai>=2.14,<3",
  "requests>=2.31.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

[tool.setuptools]
package-dir = { "" = "Back-end" }

[tool.setuptools.packages.find]
where = ["Back-end"]

[tool.pytest.ini_options]
testpaths = ["Back-end/tests"]
