[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "durable-compute-plane"
version = "0.1.0"
description = "Lease-aware durable job queue and worker base extracted from AI Linux Assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["durable_compute_plane*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
